--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <audio id="player" src="/audio/driftveil_city.mp3"></audio>
-    <div>
+    <div class="btn-wrapper">
         <button class="player-btn" onclick="document.getElementById('player').play()">Play</button>
         <button class="player-btn" onclick="document.getElementById('player').pause()">Pause</button>
         <button class="player-btn" onclick="document.getElementById('player').muted=!document.getElementById('player').muted">Mute/ Unmute</button>
